--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                bat¡®E:¡¯
+                bat¡®C:¡¯
                 bat¡®cd C:\Users\dell\.jenkins\workspace\simple-java-maven-app¡¯
                 sh 'mvn -B -DskipTests clean package'b
                 
